Adição de um parágrafo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
          Soluta cum eum magnam laudantium alias tempore sequi quidem 
          molestias deserunt nobis? Blanditiis, temporibus id. Voluptates 
          eum quo laborum cum maxime eius?</p>
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+         Minus reiciendis soluta, aut officia perspiciatis aliquid 
+         quo consectetur atque iste est porro cum earum? Mollitia ipsum
+          autem aliquid quae ea reiciendis.</p>
 </body>
 </html>
